css link updated

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     />
 
     <!-- css stylesheet -->
-    <link rel="stylesheet" type="text/css" href="/css/main.css" />
+    <link rel="stylesheet" type="text/css" href="./css/main.css" />
 
     <!-- JS file -->
     <script defer src="./index.js"></script>
