html file updated

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   </head>
   <body class="flex flex-col">
     <main class="faq-card grid">
-      <div class="faq-imgwrapper">
+      <section class="faq-imgwrapper">
         <img
           class="faq-imgwrapper--image"
           src="./images/illustration-woman-online-mobile.svg"
@@ -43,10 +43,10 @@
           alt=""
           aria-hidden="true"
         />
-      </div>
-      <div class="faq-container flex flex-col">
+      </section>
+      <section class="faq-container flex flex-col">
         <h1 class="faq-title">faq</h1>
-        <article class="question">
+        <div class="question">
           <div class="question-title flex">
             <p>How many team members can I invite?</p>
             <button type="button" class="question-btn">
@@ -64,9 +64,9 @@
               no limit on team members for the Premium plan.
             </p>
           </div>
-        </article>
+        </div>
 
-        <article class="question">
+        <div class="question">
           <div class="question-title flex">
             <p>What is the maximum file upload size?</p>
             <button type="button" class="question-btn">
@@ -84,9 +84,9 @@
               storage space.
             </p>
           </div>
-        </article>
+        </div>
 
-        <article class="question">
+        <div class="question">
           <div class="question-title flex">
             <p>How do I reset my password?</p>
             <button type="button" class="question-btn">
@@ -104,9 +104,9 @@
               from your profile page. A reset link will be emailed to you.
             </p>
           </div>
-        </article>
+        </div>
 
-        <article class="question">
+        <div class="question">
           <div class="question-title flex">
             <p>Can I cancel my subscription?</p>
             <button type="button" class="question-btn">
@@ -124,9 +124,9 @@
               asked.
             </p>
           </div>
-        </article>
+        </div>
 
-        <article class="question">
+        <div class="question">
           <div class="question-title flex">
             <p>Do you provide additional support?</p>
             <button type="button" class="question-btn">
@@ -144,8 +144,8 @@
               during normal business hours.
             </p>
           </div>
-        </article>
-      </div>
+        </div>
+      </section>
     </main>
     <footer class="attribution">
       Challenge by
