--- a/index.html
+++ b/index.html
@@ -46,10 +46,10 @@
       </section>
       <section class="faq-container flex flex-col">
         <h1 class="faq-title">faq</h1>
-        <div class="question">
+        <article class="question">
           <div class="question-title flex">
-            <p>How many team members can I invite?</p>
-            <button type="button" class="question-btn">
+            <h3>How many team members can I invite?</h3>
+            <button type="button" class="question-btn" aria-label="arrows">
               <span class="question-btn--up"
                 ><img src="./images/icon-arrow-up.svg" alt=""
               /></span>
@@ -64,12 +64,12 @@
               no limit on team members for the Premium plan.
             </p>
           </div>
-        </div>
+        </article>
 
-        <div class="question">
+        <article class="question">
           <div class="question-title flex">
-            <p>What is the maximum file upload size?</p>
-            <button type="button" class="question-btn">
+            <h3>What is the maximum file upload size?</h3>
+            <button type="button" class="question-btn" aria-label="arrows">
               <span class="question-btn--up"
                 ><img src="./images/icon-arrow-up.svg" alt=""
               /></span>
@@ -84,12 +84,12 @@
               storage space.
             </p>
           </div>
-        </div>
+        </article>
 
-        <div class="question">
+        <article class="question">
           <div class="question-title flex">
-            <p>How do I reset my password?</p>
-            <button type="button" class="question-btn">
+            <h3>How do I reset my password?</h3>
+            <button type="button" class="question-btn" aria-label="arrows">
               <span class="question-btn--up"
                 ><img src="./images/icon-arrow-up.svg" alt=""
               /></span>
@@ -104,12 +104,12 @@
               from your profile page. A reset link will be emailed to you.
             </p>
           </div>
-        </div>
+        </article>
 
-        <div class="question">
+        <article class="question">
           <div class="question-title flex">
-            <p>Can I cancel my subscription?</p>
-            <button type="button" class="question-btn">
+            <h3>Can I cancel my subscription?</h3>
+            <button type="button" class="question-btn" aria-label="arrows">
               <span class="question-btn--up"
                 ><img src="./images/icon-arrow-up.svg" alt=""
               /></span>
@@ -124,12 +124,12 @@
               asked.
             </p>
           </div>
-        </div>
+        </article>
 
-        <div class="question">
+        <article class="question">
           <div class="question-title flex">
-            <p>Do you provide additional support?</p>
-            <button type="button" class="question-btn">
+            <h3>Do you provide additional support?</h3>
+            <button type="button" class="question-btn" aria-label="arrows">
               <span class="question-btn--up"
                 ><img src="./images/icon-arrow-up.svg" alt=""
               /></span>
@@ -144,7 +144,7 @@
               during normal business hours.
             </p>
           </div>
-        </div>
+        </article>
       </section>
     </main>
     <footer class="attribution">
