html tag changed

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   </head>
   <body class="flex flex-col">
     <main class="faq-card grid">
-      <section class="faq-imgwrapper">
+      <aside class="faq-imgwrapper">
         <img
           class="faq-imgwrapper--image"
           src="./images/illustration-woman-online-mobile.svg"
@@ -43,12 +43,12 @@
           alt=""
           aria-hidden="true"
         />
-      </section>
+      </aside>
       <section class="faq-container flex flex-col">
         <h1 class="faq-title">faq</h1>
         <article class="question">
           <div class="question-title flex">
-            <h3>How many team members can I invite?</h3>
+            <h2>How many team members can I invite?</h2>
             <button type="button" class="question-btn" aria-label="arrows">
               <span class="question-btn--up"
                 ><img src="./images/icon-arrow-up.svg" alt=""
@@ -68,7 +68,7 @@
 
         <article class="question">
           <div class="question-title flex">
-            <h3>What is the maximum file upload size?</h3>
+            <h2>What is the maximum file upload size?</h2>
             <button type="button" class="question-btn" aria-label="arrows">
               <span class="question-btn--up"
                 ><img src="./images/icon-arrow-up.svg" alt=""
@@ -88,7 +88,7 @@
 
         <article class="question">
           <div class="question-title flex">
-            <h3>How do I reset my password?</h3>
+            <h2>How do I reset my password?</h2>
             <button type="button" class="question-btn" aria-label="arrows">
               <span class="question-btn--up"
                 ><img src="./images/icon-arrow-up.svg" alt=""
@@ -108,7 +108,7 @@
 
         <article class="question">
           <div class="question-title flex">
-            <h3>Can I cancel my subscription?</h3>
+            <h2>Can I cancel my subscription?</h2>
             <button type="button" class="question-btn" aria-label="arrows">
               <span class="question-btn--up"
                 ><img src="./images/icon-arrow-up.svg" alt=""
@@ -128,7 +128,7 @@
 
         <article class="question">
           <div class="question-title flex">
-            <h3>Do you provide additional support?</h3>
+            <h2>Do you provide additional support?</h2>
             <button type="button" class="question-btn" aria-label="arrows">
               <span class="question-btn--up"
                 ><img src="./images/icon-arrow-up.svg" alt=""
