html class added

--- a/index.html
+++ b/index.html
@@ -48,7 +48,9 @@
         <h1 class="faq-title">faq</h1>
         <article class="question">
           <div class="question-title flex">
-            <h2>How many team members can I invite?</h2>
+            <h2 class="question-title--heading">
+              How many team members can I invite?
+            </h2>
             <button type="button" class="question-btn" aria-label="arrows">
               <span class="question-btn--up"
                 ><img src="./images/icon-arrow-up.svg" alt=""
@@ -68,7 +70,9 @@
 
         <article class="question">
           <div class="question-title flex">
-            <h2>What is the maximum file upload size?</h2>
+            <h2 class="question-title--heading">
+              What is the maximum file upload size?
+            </h2>
             <button type="button" class="question-btn" aria-label="arrows">
               <span class="question-btn--up"
                 ><img src="./images/icon-arrow-up.svg" alt=""
@@ -88,7 +92,7 @@
 
         <article class="question">
           <div class="question-title flex">
-            <h2>How do I reset my password?</h2>
+            <h2 class="question-title--heading">How do I reset my password?</h2>
             <button type="button" class="question-btn" aria-label="arrows">
               <span class="question-btn--up"
                 ><img src="./images/icon-arrow-up.svg" alt=""
@@ -108,7 +112,9 @@
 
         <article class="question">
           <div class="question-title flex">
-            <h2>Can I cancel my subscription?</h2>
+            <h2 class="question-title--heading">
+              Can I cancel my subscription?
+            </h2>
             <button type="button" class="question-btn" aria-label="arrows">
               <span class="question-btn--up"
                 ><img src="./images/icon-arrow-up.svg" alt=""
@@ -128,7 +134,9 @@
 
         <article class="question">
           <div class="question-title flex">
-            <h2>Do you provide additional support?</h2>
+            <h2 class="question-title--heading">
+              Do you provide additional support?
+            </h2>
             <button type="button" class="question-btn" aria-label="arrows">
               <span class="question-btn--up"
                 ><img src="./images/icon-arrow-up.svg" alt=""
